--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,14 +2,10 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./backend/requirements.txt /app/
+COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./backend /app/
-
 EXPOSE 5000
 
-ENV REDIS_URL=redis://red-cthhrg56l47c73ck1rm0:6379
-
-CMD ["python", "app.py"]  
+CMD ["python", "app.py"]
