--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,8 +1,5 @@
-
 FROM nginx:latest
 
-COPY ./frontend /usr/share/nginx/html
+COPY . /usr/share/nginx/html
 
 EXPOSE 80
-
-COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
